<resources>
    <string name="app_name">version0</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="groups">Groups</string>
    <string name="tests">Tests</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fr_home">FR Home</string>
    <string name="run_test">Run a test</string>
    <string name="plus">+</string>
    <string name="groupStudents1">1
        \nName
        \nSurmane
    </string>
</resources>