<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="15dp"
    android:background="@drawable/bg_login"
    tools:context=".Login">

    <TextView
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:shadowColor="@color/shadow_white"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/color_hint"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="20dp"
            android:background="@color/textView_bg"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/color_hint"
        app:hintEnabled="false"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textView_bg"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="20dp"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        style="@style/ButtonStyleWithShadow"/>

    <TextView
        android:id="@+id/registerNow"
        android:textStyle="bold"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:shadowColor="@color/shadow_white"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/click_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>